cmake_minimum_required(VERSION 3.26)
project(examentema2)

set(CMAKE_CXX_STANDARD 14)

add_executable(examentema2
        estructuraestudianteC++.cpp)
add_executable(estructuraestudianteC estructuraestudianteC.cpp)
add_executable(estructuraestudiantecomparativa estructuraestudiantecomparativa.cpp)
add_executable(gestionmateriasC++ gestionmateriasC++.cpp)
add_executable(gestionmateriasC gestionmateriasC.cpp)
add_executable(asistenciaC++ asistenciaC++.cpp)
